--- a/styles/styles.css
+++ b/styles/styles.css
@@ -23,7 +23,7 @@
   --heading-font-size-m: 25px;
 
   /* nav height */
-  --nav-height: 151px;
+  --nav-height: 140px;
   --nav-height-sm: 139px;
 }
 
